<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".common.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_back"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/txt_btn_ini_sesion"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_enter_phone"
                    android:textColorHint="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/textfield_box_stroke_color"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="?attr/colorOnPrimary"
                    app:hintTextColor="?attr/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:startIconTint="?attr/colorOnPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_light"
                        android:inputType="phone"
                        android:textColor="?attr/colorOnPrimary"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_enter_password"
                    android:textColorHint="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/textfield_box_stroke_color"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="?attr/colorOnPrimary"
                    app:hintTextColor="?attr/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="?attr/colorOnPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_light"
                        android:inputType="textPassword"
                        android:textColor="?attr/colorOnPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:buttonTint="?attr/colorOnPrimary"
                        android:text="@string/txt_remember_me"
                        android:textColor="?attr/colorOnPrimary" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:background="#00000000"
                        android:gravity="center"
                        android:text="@string/txt_forget_password"
                        android:textAlignment="center"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="13sp" />


                </RelativeLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="?attr/colorOnPrimary"
                    android:text="@string/txt_btn_ini_sesion"
                    android:textColor="@color/white" />

                <!--                <Button-->
                <!--                    android:id="@+id/btn_register"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:layout_marginTop="20dp"-->
                <!--                    android:background="#00000000"-->
                <!--                    android:onClick="callToRegisterView"-->
                <!--                    android:text="@string/txt_btn_create_acount"-->
                <!--                    android:textColor="?attr/colorOnPrimary"-->
                <!--                    android:transitionName="tsr_register"-->
                <!--                    tools:ignore="UsingOnClickInXml" />-->

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:onClick="callToRegisterView"
                android:text="@string/txt_btn_create_acount"
                android:textColor="?attr/colorOnPrimary"
                android:transitionName="tsr_register" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>